--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,7 +47,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\CameraZoom.cs" />
-     <Compile Include="Assets\CreateField.cs" />
+     <Compile Include="Assets\ChunkDelete.cs" />
+     <Compile Include="Assets\ChunkManager.cs" />
+     <Compile Include="Assets\CreateChunk.cs" />
      <Compile Include="Assets\HUDFPS.cs" />
      <Compile Include="Assets\Hotkeys.cs" />
      <Compile Include="Assets\PlayerBounds.cs" />
