--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,12 +47,11 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\CameraZoom.cs" />
-     <Compile Include="Assets\ChunkDelete.cs" />
      <Compile Include="Assets\ChunkManager.cs" />
      <Compile Include="Assets\CreateChunk.cs" />
+     <Compile Include="Assets\GlobalStuff.cs" />
      <Compile Include="Assets\HUDFPS.cs" />
      <Compile Include="Assets\Hotkeys.cs" />
-     <Compile Include="Assets\PlayerBounds.cs" />
      <Compile Include="Assets\RopeControl.cs" />
      <Compile Include="Assets\TerminalVelocity.cs" />
   </ItemGroup>
