--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\HUDFPS.cs" />
      <Compile Include="Assets\Hotkeys.cs" />
      <Compile Include="Assets\RopeControl.cs" />
+     <Compile Include="Assets\SpeedBar.cs" />
      <Compile Include="Assets\TerminalVelocity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
