--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{D6A70FDB-2A72-B126-A104-6D4E254FFCAA}</ProjectGuid>
+	<ProjectGuid>{C9C5ACED-AF37-B251-9AC8-2374AADD4A08}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -60,6 +60,7 @@
      <Compile Include="Assets\SpriteSettings.cs" />
      <Compile Include="Assets\SpriteSettingsSpecial.cs" />
      <Compile Include="Assets\TerminalVelocity.cs" />
+     <Compile Include="Assets\TitleSetup.cs" />
      <Compile Include="Assets\setupField.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
