--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,12 +48,14 @@
   <ItemGroup>
      <Compile Include="Assets\BlockBounce.cs" />
      <Compile Include="Assets\CameraZoom.cs" />
+     <Compile Include="Assets\CellManager.cs" />
      <Compile Include="Assets\ChunkManager.cs" />
      <Compile Include="Assets\CreateChunk.cs" />
      <Compile Include="Assets\GlobalStuff.cs" />
      <Compile Include="Assets\HUDFPS.cs" />
      <Compile Include="Assets\Hotkeys.cs" />
      <Compile Include="Assets\RopeControl.cs" />
+     <Compile Include="Assets\SetupCell.cs" />
      <Compile Include="Assets\SlowField.cs" />
      <Compile Include="Assets\SpeedBar.cs" />
      <Compile Include="Assets\SpinnerCollision.cs" />
