--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,12 +47,17 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\BlockBounce.cs" />
+     <Compile Include="Assets\ButtonQuit.cs" />
+     <Compile Include="Assets\ButtonRestart.cs" />
+     <Compile Include="Assets\ButtonResume.cs" />
      <Compile Include="Assets\ButtonSetup.cs" />
      <Compile Include="Assets\CameraZoom.cs" />
      <Compile Include="Assets\CellManager.cs" />
      <Compile Include="Assets\ChunkManager.cs" />
      <Compile Include="Assets\ContainerSetup.cs" />
      <Compile Include="Assets\CreateChunk.cs" />
+     <Compile Include="Assets\EventManager.cs" />
+     <Compile Include="Assets\GlobalStore.cs" />
      <Compile Include="Assets\GlobalStuff.cs" />
      <Compile Include="Assets\HUDFPS.cs" />
      <Compile Include="Assets\Hotkeys.cs" />
